finish delete ep
